# proto-dotnet-plugin

./: .prototools  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
src/: global_json.rs  helpers.rs  lib.rs  proto.rs  release_index.rs
tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
