[package]
name = "dotnet_plugin"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = { version = "1.0.1" }
proto_pdk = { version = "0.15.2" }
semver = "1.0.21"
serde = "1.0.195"

[dev-dependencies]
proto_pdk_test_utils = { version = "0.17.3" }
starbase_sandbox = "0.1.13"
tokio = { version = "1.35.1", features = ["full"] }

[features]
default = ["wasm"]
wasm = []

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
